Enhance the code using AI tools
The code can be improved.

Let's
* use ChatGPT to improve the code quality
* eg display the error messages properly